--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
+//    dependencies {
+//        compile fileTree(dir:  'libs' , include: ['*.jar'])
+//        androidTestCompile ('com.android.support.test.espresso: espresso-core: 2.2.2', {
+//            exclude group: 'com.android.support',  module: 'support-annotations'
+//        })
+//        compile 'com.android.support: appcompat-v7:25.1.0'
+//        testCompile 'junit: junit: 4.12'
+//    }
+//    dependencies{
+//
+//    }
 }
 
 dependencies {
@@ -28,4 +45,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/BaiduLBS_Android.jar')
+    implementation files('libs/gson-2.7.jar')
 }
